env config for firebase credentials, basic app structure and retrieving data from firestore

--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Date Painter Web</title>
-</head>
-<body>
-    <h1>Date painter</h1>
-
-    <section>
-        <button id="button-9">9</button>
-        <button id="button_new_swatch">new swatch</button>
-
-        <ul id="names-list">
-
-        </ul>
-    </section>
-    
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.3.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-firestore.js"></script>
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-    
+  </head>
+  <body>
     <div id="root"></div>
-    <script defer src="app.js"></script>
-</body>
+  </body>
 </html>
