Adding scss and images to begin styling the app

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="shortcut icon" href="favicon.ico" />
 
-    <title>Date Painter Web</title>
+    <title>Date Painter</title>
   </head>
   <body>
     <div id="root"></div>
