--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,16 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+      href="https://fonts.googleapis.com/css?family=Inter"
+    >
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+      href="https://fonts.googleapis.com/css?family=Reem+Kufi"
+    >
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Pacifico"
+    >
     <link rel="shortcut icon" href="favicon.ico" />
 
     <title>Date Painter</title>
