Optimising the loading of fonts, so not render blocking

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,21 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+
+    <!-- optimise fetching fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter"
+      href="https://fonts.googleapis.com/css?family=Inter|Reem+Kufi:400,700&display=swap"
+      media="print"
+      onload="this.onload=null;this.removeAttribute('media');"
     >
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Reem+Kufi"
-    >
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Pacifico"
+      href="https://fonts.googleapis.com/css?family=Pacifico:400&display=swap"
+      media="print"
+      onload="this.onload=null;this.removeAttribute('media');"
     >
     <link rel="shortcut icon" href="favicon.ico" />
 
