SEO: added robots.txt for webcrawlers and add description meta tag for google search

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+    <meta name="description" content="Date Painter makes choosing a day that suits everyone simple. It's quick to set up a free date poll and then share the unique link with your friends or co-workers. The paint theme adds a fun dimension to submitting how available you are on each day."/>
 
     <!-- optimise fetching fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
