Updating canonical to .com address

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="Date Painter makes choosing a day that suits everyone simple. It's quick to set up a free date poll and then share the unique link with your friends or co-workers. The paint theme adds a fun dimension to submitting how available you are on each day."/>
     <meta name="google-site-verification" content="Nr8xCZwdig0cVY--KurhMg2nKFmbzxJSU6uknjeypYk" />
-    <link rel="canonical" href="https://date-painter.web.app/" />
+    <link rel="canonical" href="https://datepainter.com" />
 
     <!-- optimise fetching fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
