--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       onload="this.onload=null;this.removeAttribute('media');"
     >
     <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json">
 
     <title>Date Painter</title>
   </head>
